# felix

./: Cargo.toml  README.md
src/: error.rs  main.rs  responses.rs  stream.rs  utils.rs
src/api/: capabilites.rs  mod.rs
src/api/requests/: header.rs  mod.rs  traits.rs
src/api/requests/body/: api_versions.rs  describe_topics_partitions.rs  mod.rs
src/api/responses/: header.rs  mod.rs  traits.rs
src/api/responses/body/: api_versions.rs  describe_topics_partitions.rs  mod.rs
src/protocol/: metadata.rs  mod.rs  reader.rs
src/request/: header.rs
src/requests/: head.rs  mod.rs  request.rs
src/stream/: req.rs  request.rs  res.rs  response.rs
src/utils/: errors.rs  versions.rs
